UI - Alignment Issue

--- a/web/src/Pages/Company/addNewCompany.scss
+++ b/web/src/Pages/Company/addNewCompany.scss
@@ -4,7 +4,6 @@
 
 .company-details-form-container {
   width: 100%;
-
   .company-details-form {
     .steps-actions {
       display: flex;
@@ -157,7 +156,7 @@
   display: flex;
   flex-direction: column;
   border-radius: 5px;
-  padding: 0 2rem 0 2rem;
+  padding: 0 50px;
 
   .title-container {
     display: flex;
